--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,7 +21,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
-.item-avatar {
+ion-side-menu .item-avatar {
     background-color: $royal;
     h2, p {
         color: white;
