more chats on refresh. minor fixes.

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -4546,7 +4546,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
 
 .popup-body {
   padding: 10px;
-  overflow: scroll; }
+  overflow: auto; }
 
 .popup-buttons {
   display: -webkit-box;
