--- a/www/templates/popover.html
+++ b/www/templates/popover.html
@@ -1,7 +1,7 @@
 <ion-popover-view>
     <ion-content>
         <ion-list>
-            <ion-item menu-close class="item-icon-right" type="item-text-wrap" href="#/login" ng-click="hidePopover()">
+            <ion-item menu-close class="item-icon-right" type="item-text-wrap" href="#/login" ng-click="hideActionsMenu()">
                 <h3>Logout</h3>
             </ion-item>
         </ion-list>
